syntax = "proto3";

package berty.daemon;

option go_package = "berty.tech/core/daemon";

service Daemon {
  rpc DropDatabase (Void) returns (Void) {};
  rpc GetLocalGrpcInfos (Void) returns (GRPCInfos) {};
  rpc GetNetworkConfig (Void) returns (NetworkConfig) {};
  rpc GetPort (Void) returns (GetPortResponse) {};
  rpc Initialize (Config) returns (Void) {};
  rpc GetBotState (Void) returns (BotState) {};
  rpc ListAccounts (Void) returns (ListAccountsResponse) {};
  rpc Panic (Void) returns (Void) {};
  rpc Restart (Void) returns (Void) {};
  rpc SetCurrentRoute (Void) returns (Void) {};
  rpc Start (StartRequest) returns (Void) {};
  rpc StartBot (Void) returns (Void) {};
  rpc StartLocalGRPC (Void) returns (Void) {};
  rpc StopBot (Void) returns (Void) {};
  rpc StopLocalGRPC (Void) returns (Void) {};
  rpc UpdateNetworkConfig (NetworkConfig) returns (Void) {};
}

message Void {}

message BotState {
  bool isBotRunning = 1;
}

message StartRequest {
  string nickname = 1;
}

// @TODO: switch to protobuf message instead of json
message GRPCInfos {
  string json = 1;
}

// @TODO: switch to protobuf message instead of json
message NetworkConfig {
  string json = 1;
}

message SQLConfig {
  string name = 1;
	string key = 2;
}

message Config {
	SQLConfig sqlOpts = 1;

	string grpcBind = 2;
	string gqlBind = 3;
	bool hideBanner = 4;
	bool dropDatabase = 5;
	bool initOnly = 6;
	bool withBot = 7;
	bool notification = 8;
	repeated string apnsCerts = 9;
	repeated string apnsDevVoipCerts = 10;
	repeated string fcmAPIKeys = 11;
	string privateKeyFile = 12;

	// p2p
	bool peerCache = 13;
	string identity = 14;
	repeated string bootstrap = 15;
	bool noP2P = 16;
	repeated string bindP2P = 17;
	repeated string transportP2P = 18;
	bool hop = 19;
	bool ble = 20;
	bool mdns = 21;
	bool dhtServer = 22;
	bool PrivateNetwork = 23;
	string SwarmKeyPath = 24;
}

// @TODO: list all ports available
message GetPortResponse {
  int32 port = 1;
}

message ListAccountsResponse {
  repeated string accounts = 1;
}
